Views: Add Intervention and Product  views, modify Index and Privacy views

--- a/CustomerPortal/Views/Home/Privacy.cshtml
+++ b/CustomerPortal/Views/Home/Privacy.cshtml
@@ -3,4 +3,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>We may use third-party analytics services on the Rocket Elevators Portal.</p>
+<p>The analytics providers that administer these services use technologies such as cookies, web beacons, web server logs and similai technologies to help us analyze your use of the site. </p>
+<p>The information collected through these means may be disclosed to these analytics providers and other relevant thir parties who use the information, for example, to evaluate use of the site. </p>
+<p>Rocket Elevators inc.</p>
