--- a/CustomerPortal/Views/Shared/_LoginPartial.cshtml
+++ b/CustomerPortal/Views/Shared/_LoginPartial.cshtml
@@ -11,10 +11,10 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Products</a> @*TODO_CINDY*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Products">My Products</a> 
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Request Intervention</a> @*TODO_CINDY*@
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Intervention">Request Intervention</a> 
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
