Commit before deploy

--- a/CustomerPortal/Views/Home/Products.cshtml
+++ b/CustomerPortal/Views/Home/Products.cshtml
@@ -1,10 +1,139 @@
-﻿@{
+﻿@model Customer
+
+@{
     ViewData["Title"] = "My Products";
 }
 
 <div class="text-center">
     <h1 class="display-4">Product management</h1>
-    <p>
+
+    <div class="accordion" id="accordionExample">
+        <div class="card">
+            <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Batteries
+                    </button>
+                </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Header1</th>
+                                <th>Header2</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Columns
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Header1</th>
+                                <th>Header2</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                            <tr>
+                                <td>Data1</td>
+                                <td>Data2</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                    <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Elevators
+                    </button>
+                </h5>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                            <tr>
+                                <th>Elevator Id</th>
+                                <th>Model</th>
+                                <th>Serial Number</th>
+                                <th>Status</th>
+                                <th>New Intervention</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            @foreach (var elevator in Model.buildings.SelectMany(bu => bu.batteries.SelectMany(ba => ba.columns.SelectMany(co => co.elevators))))
+                            {
+                            <tr>
+                                <td>@elevator.id</td>
+                                <td>@elevator.id</td>
+                                <td>@elevator.model</td>
+                                <td>@elevator.serial_number</td>
+                                <td>@elevator.serial_number</td>
+                                <td>/create(@elevator.serial_number)</td>
+                            </tr>
+                            }
+                            <tr>
+                                <td>Data1</td>
+                                <td>@Model.sta_name</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <p>        
         See the details of the different products purchased from us: batteries, columns and elevators.
     </p>
     <p>
