--- a/CustomerPortal/Views/Shared/_Layout.cshtml
+++ b/CustomerPortal/Views/Shared/_Layout.cshtml
@@ -3,21 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - CustomerPortal</title>
+    <title>@ViewData["Title"] - Customer Portal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <!-- rocket elevator icon title -->
+    <link rel="icon" type="image/png" href="~/Images/logo-favicon.png">
 
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 fixed">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CustomerPortal</a>                  
+                <img src="~/Images/logo.png" height="75" width="200" alt="Logo" />
+                <a class="navbar-brand" asp-area="" asp-controller="" asp-action=""> </a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Customer Portal</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial.cshtml" />                   
+                    <partial name="_LoginPartial.cshtml" />
                 </div>
             </div>
         </nav>
