--- a/CustomerPortal/Views/Shared/_LoginPartial.cshtml
+++ b/CustomerPortal/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Products">My Products</a> 
+            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="getFullCustomerInfo">My Products</a> 
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Intervention">Request Intervention</a> 
