--- a/CustomerPortal/Views/Shared/_Layout.cshtml
+++ b/CustomerPortal/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 fixed">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <img src="~/Images/logo.png" height="75" width="200" alt="Logo" />
                 <a class="navbar-brand" asp-area="" asp-controller="" asp-action=""> </a>
